# mcpway

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-bake.hcl  zbpack.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: docker-publish.yaml  rust-publish-crate.yml  rust-verify.yml
docker/: Dockerfile
rust/: Cargo.toml  README.md  build.rs
rust/proto/: mcpway_bridge.proto
rust/scripts/: publish_crate.sh  sync_web_dist.sh  verify.sh
rust/src/: config.rs  connect.rs  grpc_proto.rs  lib.rs  logs.rs  main.rs  types.rs
rust/src/discovery/: mod.rs  registry.rs
rust/src/discovery/sources/: claude.rs  codex.rs  cursor.rs  mod.rs  nodecode.rs  opencode.rs  vscode.rs  windsurf.rs
rust/src/gateways/: grpc_to_stdio.rs  mod.rs  sse_to_stdio.rs  stdio_to_grpc.rs  stdio_to_sse.rs  stdio_to_stdio.rs  stdio_to_streamable_http.rs  stdio_to_ws.rs  streamable_http_to_stdio.rs  ws_to_stdio.rs
rust/src/generator/: artifacts.rs  definition.rs  metadata.rs  mod.rs  normalize.rs  wrapper_template.rs
rust/src/oauth/: mod.rs
rust/src/runtime/: admin.rs  mod.rs  prompt.rs  store.rs
rust/src/support/: browser_launch.rs  command_spec.rs  log_store.rs  mod.rs  session_access_counter.rs  signals.rs  stdio_child.rs  telemetry.rs
rust/src/tool_api/: builder.rs  client.rs  ergonomic.rs  error.rs  mod.rs  schema.rs  transport.rs
rust/src/transport/: mod.rs  pool.rs  reliability.rs
rust/src/web/: mod.rs
rust/tests/: base_url_parity.rs  concurrency_sse_to_stdio.rs  concurrency_stdio_to_sse.rs  concurrency_stdio_to_streamable_http.rs  concurrency_stdio_to_ws.rs  concurrency_streamable_http_to_stdio.rs  connect_ws_to_stdio_smoke.rs  grpc_to_stdio_smoke.rs  protocol_version_parity.rs  session_timeout_parity.rs  sse_to_stdio_smoke.rs  stdio_to_grpc_smoke.rs  stdio_to_sse_smoke.rs  stdio_to_stdio_smoke.rs  stdio_to_streamable_http_smoke.rs  stdio_to_ws_smoke.rs  streamable_http_to_stdio_smoke.rs  tool_api_ergonomic.rs  tool_api_sse.rs  tool_api_streamable_http.rs  tool_api_ws.rs
rust/tests/common/: mod.rs
rust/web-dist/: index.html
rust/web-dist/assets/: index-9iPf40B0.js  index-DzXlMxaS.css
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: reference-opencode.sh
web/src/: App.tsx  main.tsx  styles.css
web/src/ui/: brand-logo.tsx
web/src/ui/primitives/: button.css  button.tsx  card.css  card.tsx  icon-button.css  icon-button.tsx  index.css  index.ts  scroll-view.css  scroll-view.tsx  select.css  select.tsx  shared.css  text-field.css  text-field.tsx
web/src/ui/surfaces/: error-format.ts  error-overlay.css  error-overlay.tsx  error-screen.css  error-screen.tsx  log-detail-overlay.css  log-detail-overlay.tsx
web/src/ui/theme/: base.css  tokens.css
